--- a/01/playbook.yaml
+++ b/01/playbook.yaml
@@ -4,9 +4,6 @@
   remote_user: ubuntu
   become: yes
 
-  #vars_files:
-  #- group_vars/all
-
   tasks:
   
   - name: Ansible Update Cache and Upgrade all Packages
@@ -28,14 +25,9 @@
       - git
       - curl
       - wget
-      - nodejs
-
-  - name: Ansible shell module multiple commands
-    shell: 'curl -L https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | sudo bash'
-
 
   # - name: Remove a package
   #   apt:
-  #     pkg: ansible
+  #     pkg: git
   #     state: absent
   #   become: true
